# obvi

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.hpp
cmake/: .gitrepo  AddFlags.cmake  AddFlagsHelpers.cmake  AddQtPath.cmake  IDESetup.cmake  InstallDeps.cmake  ProjectSetup.cmake
include/obvi/util/: affine3.hpp  bbox.hpp  bvh.hpp  camera3.hpp  compat_omp.hpp  mat3.hpp  math.hpp  vec3.hpp
shaders/: flat.frag  flat.vert  shaders.qrc
tests/: CMakeLists.txt  geom.cpp  main.cpp  test_affine3.cpp  test_bbox.cpp  test_mat3.cpp  test_math.cpp  test_vec3.cpp  tests_main.cpp
util/: CMakeLists.txt  bvh.cpp
